--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Services</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Projects</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
@@ -127,7 +127,7 @@
      	<div class="container_16">
 	
 		<div class="subheader">
-			<div class="subheader_line"></div><h2>services</h2><div class="subheader_line"></div>
+			<div class="subheader_line"></div><b><h2>Services</h2></b>
 		</div>
 		
 		<div class="clear"></div>
@@ -135,55 +135,49 @@
 		<div class="serv_icons">
 			<div class="grid_4">
 				<div class="serv_icon1"></div>
-				<figure class="cc-effect"><img src="images/serv_icon1.png" alt="Image" />
+				  <!-- <figure class="cc-effect"><img src="images/serv_icon1.png" alt="Image" /> -->
 				<h3>Full STLC Support</h3>
 				<p>Achieve high software quality on every step of the software engineering process.</p>
-			</div>
-    <div>
-        <figure class="cc-effect"><img src="images/serv_icon1.png" alt="Image" /></figure>
-    </div>
-    
-
-      
-			<div class="grid_4">
-				<div class="serv_icon2"></div>
+			</div> 
+      <div class="grid_4">
+				<!-- <div class="serv_icon2"></div> -->
 				<h3>Manual Testing</h3>
 				<p>Ensure your software app is fully-compliant with the defined business requirements.</p>
 			</div>
 		
 			<div class="grid_4">
-				<div class="serv_icon3"></div>
+				<!-- <div class="serv_icon3"></div> -->
 				<h3>Mobile Testing</h3>
 				<p>Covering compatibility, unstable functionality and UI rendering on iOS & Android with multiple devices.</p>
 			</div>
 			
 			<div class="grid_4">
-				<div class="serv_icon4"></div>
+				<!-- <div class="serv_icon4"></div> -->
 				<h3>Test Automation</h3>
 				<p>Help you to automate your testing needs with core expertise on all industry-leading tools like Selenium, HP UFT, Coded UI, TestComplete, Saucelabs, Appium, etc.</p>
 			</div>
-		</div> <!-- end .serv_icons -->
+		<!-- </div> end .serv_icons -->
 		<div class="serv_icons">
 			<div class="grid_4">
-				<div class="serv_icon5"></div>
+				<!-- <div class="serv_icon5"></div> -->
 				<h3>Digital Testing</h3>
 				<p>Functional and non-functional testing of digital applications including social, mobile, analytics and cloud.</p>
 			</div>
 		
 			<div class="grid_4">
-				<div class="serv_icon6"></div>
+				<!-- <div class="serv_icon6"></div> -->
 				<h3>Security Testing</h3>
 				<p>Testing to ensure the applications are secure against any vulnerabilities & Sql Injections.</p>
 			</div>
 		
 			<div class="grid_4">
-				<div class="serv_icon7"></div>
+				<!-- <div class="serv_icon7"></div> -->
 				<h3>Performance Testing</h3>
 				<p>Testing for Speed, stability and scalability to ensure the applications performs well under stress & peak load. </p>
 			</div>
 			
 			<div class="grid_4">
-				<div class="serv_icon8"></div>
+				<!-- <div class="serv_icon8"></div> -->
 				<h3>Usability Testing</h3>
 				<p>Help you identify all the usability issues before the application is released to the end-users, providing an intuitive user experience for your customers.</p>
 			</div>
@@ -217,9 +211,10 @@
                   <div class="fa fa-check col-md-6">
                       <b style="font-size:18px;padding-left: 5px;">Achievements</b>
                       <div class="card-body">
-                        <div class=""><p class="fa fa-caret-right">  Putting continous efforts to transition Legacy app into a new <b style="color:green;">Angular</b> and  <b style="color:green;">WebAPI</b> based app.</p></div>
-                        <div class=""><p class="fa fa-caret-right">  Implemented <b style="color:green;">ReactiveJS(RxJS)</b> componets.  </p></div>
-                        <div class=""><p class="fa fa-caret-right">  Worked with <b style="color:green;">AG-Grid</b>, <b style="color:green;">Two way databinding</b>, <b style="color:green;">GraphQL</b>.  </p></div>
+                        <div class=""><p class="fa fa-caret-right">  Putting continous efforts to transition Legacy procdure into a new <b style="color:green;">Web application</b> and  <b style="color:green;">data-warehouse</b> based app.</p></div>
+                        <div class=""><p class="fa fa-caret-right">  Executed ETL Testing for transition of healthcare file into database.</p></div>
+                        <div class=""><p class="fa fa-caret-right">  Tested BI reports and end to end application testing.  </p></div>
+                        <div class=""><p class="fa fa-caret-right">  Created BDD framework for to automate testing using selenium tool which includes functional test cases of system.   </p></div>
                       </div>
                   </div>
                 </div>
@@ -233,10 +228,9 @@
                   <div class="fa fa-check col-md-6">
                       <b style="font-size:18px;padding-left: 5px;">Achievements</b>
                       <div class="card-body">
-                        <div class=""><p class="fa fa-caret-right">  Created a portal in <b style="color:green;">ReactJS</b> where designers can review Ratings and Feedbacks provided by customers on their work </p></div>
-                        <div class=""><p class="fa fa-caret-right">  Made improvements into <b style="color:green;">Acuity</b> App integrated with existing project for better appointment scheduling experience and to minimise idle appointments.  </p></div>
-                        <div class=""><p class="fa fa-caret-right">  Integrated new Video conferencing API <b style="color:green;">Zoom</b> into existing project.  </p></div>
-                        <div class=""><p class="fa fa-caret-right">  Also implemented <b style="color:green;">Web Hooks</b>, <b style="color:green;">OAuthv2</b>, <b style="color:green;">AWS Lamda functions</b>  </p></div>
+                        <div class=""><p class="fa fa-caret-right">  Tested various EDI files for healthcare domain with the functionality of sending request and reciving responses.</p></div>
+                        <div class=""><p class="fa fa-caret-right">  Prepared testcases and testmatrixes for end to end testing of applications.</p></div>
+                        <div class=""><p class="fa fa-caret-right">  Implemented automation testing for regression tesing using selenium C# and NUnit framework  </p></div>                        
                       </div>
                   </div>
                   <div class="col-md-6">
@@ -261,7 +255,7 @@
                   <div class="col-md-6">
                     <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                       <a>
-                        <figure class="cc-effect"><img src="images/RMS.png" alt="Image" style="margin-left: 17%;"/>
+                        <figure class="cc-effect"><img src="images/RMS.png" alt="Image"/>
                           <figcaption>
                             <div class="h4" style="margin-top:7%">RMS</div>
                             <p style="text-transform: none;">RMS is stands for Referral Management System. It's application consist of operation of different EDI Files which will be use for referring patient by insure doctors and verify their plan coverage.</p>
