--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,7 +73,7 @@
                 <div class="card-body">
                   <div class="h4 mt-0 title">About</div>
                   <ul>
-                    <li>I am  a 5 years experienced web and mobile application QA Engineer. I am passionate about software testing and I would like to test different applications in order to improve their quality and to continue improving my testing skills. Over the last 5 years, I have tested over hundreds of websites using manual testing and testing tools.</li>
+                    <li>I am  a 6 years experienced web and mobile application QA Engineer. I am passionate about software testing and I would like to test different applications in order to improve their quality and to continue improving my testing skills. Over the last 5 years, I have tested over hundreds of websites using manual testing and testing tools.</li>
                     <li>I believe "The only certainties in life are death, taxes and Bugs in code." ... and that's why I'm here:</li>
                     <li>To find bugs in your application.</li>
                     <li>To make sure it works as expected and it is user friendly.</li>
@@ -92,7 +92,7 @@
                   </div>
                   <div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                    <div class="col-sm-8">dipr39@outlook.com</div>
+                    <div class="col-sm-8">deeprqa@gmail.com</div>
                   </div>
                   <div class="row mt-3">
                     <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
